# docs/swagger.json
@@ -107,6 +107,26 @@
                 "responses": {}
             }
         },
+        "/login/": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "đăng nhập tài khoản",
+                "parameters": [
+                    {
+                        "description": "Users data",
+                        "name": "users",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Users"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/order/": {
             "get": {
                 "consumes": [
@@ -119,30 +139,6 @@
                     "orders"
                 ],
                 "summary": "Get all orders",
-                "responses": {}
-            },
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "orders"
-                ],
-                "summary": "create order",
-                "parameters": [
-                    {
-                        "description": "Orders data",
-                        "name": "order",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                ],
                 "responses": {}
             }
         },
@@ -309,6 +305,26 @@
                 "responses": {}
             }
         },
+        "/register/": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "đăng kí tài khoản",
+                "parameters": [
+                    {
+                        "description": "Users data",
+                        "name": "users",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Users"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/report/inventory": {
             "get": {
                 "description": "Lấy báo cáo tồn kho",
@@ -322,6 +338,15 @@
                     "report"
                 ],
                 "summary": "Thống kê báo cáo tồn kho",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {}
             }
         },
@@ -338,6 +363,15 @@
                     "report"
                 ],
                 "summary": "Thống kê đơn hàng",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {}
             }
         },
@@ -354,6 +388,15 @@
                     "report"
                 ],
                 "summary": "Thống kê doanh thu",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {}
             }
         },
@@ -531,6 +574,23 @@
                     "type": "string"
                 },
                 "website": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Users": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                },
+                "username": {
                     "type": "string"
                 }
             }
